Add Node-Route components
    - Added: React-Bootstrap

    - Added: RouteList & RouteItem components

    - Added: NodeList & NodeItem components

    - Changed: Redux Middlewares is changing w.r. to the env (eg: logger)

    - Changed: Route names for detail view (from detail to location)

    - Changed: Home and Detail containers calls API if the related data
    does not exist in the Redux Store. It makes the app faster.

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hobarey</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
 	<main id="app"></main>
